[project]
name = "matstatlab1"
version = "0.1.0"
description = ""
authors = [
    {name = "“lavrentious”",email = "“lavrent0@yandex.ru”"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
autoflake = "^2.3.1"
scipy-stubs = "^1.15.2.1"
pandas-stubs = "^2.2.3.250308"
types-seaborn = "^0.13.2.20250111"

